fix layout issues

--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
+}
+
 a,
 button {
   transition: all 0.3s ease-in-out;
@@ -15,6 +24,15 @@ button {
 a:hover {
   text-decoration: none;
   cursor: pointer;
+}
+
+strong {
+  font-weight: inherit;
+}
+
+blockquote {
+  border: none;
+  padding: 0;
 }
 
 #page-loading-blocs-notifaction {
@@ -644,12 +662,11 @@ p,
 label,
 .btn,
 a {
-  font-family: 'helvetica';
-  font-weight: 400;
   color: #575757 !important;
 }
 
 .container {
+  position: relative;
   max-width: 1000px;
 }
 
@@ -673,7 +690,8 @@ a {
 
 .tight-width-whitespace {
   max-width: 600px;
-  margin: auto auto auto auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .h1 {
@@ -709,7 +727,8 @@ h3 {
 
 .med-width-whitespace {
   max-width: 800px;
-  margin: auto auto auto auto;
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 0px 0px 0px #000000;
 }
 
